[project]
name = "site-downloader-tool"
version = "0.1.0"
description = "CLI utility to download websites for offline viewing"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.41.0",
  "requests==2.31.0",
  "beautifulsoup4==4.12.3",
  "urllib3==2.1.0",
]

[project.scripts]
site-downloader-tool = "site_downloader_tool:main"
